# asyncapi-codegen

./: Cargo.toml  README.md
asyncapi-models/: Cargo.toml
asyncapi-models/src/: deserializer.rs  generator.rs  lib.rs  parser.rs
asyncapi-models/src/generator/: rust_gen.rs
asyncapi-schema-parser/: Cargo.toml
asyncapi-schema-parser/resources/: asyncapi.yaml  simple-schema.yaml
asyncapi-schema-parser/src/: deserializer.rs  generator.rs  parser.rs
codegen-test/: Cargo.toml  asyncapi.yaml  build.rs
codegen-test/src/: lib.rs
modelina-fix/: Cargo.toml
modelina-fix/resources/models/: anonymous_schema4.rs  delete_package_element.rs  get_user_role_for_module_and_fail_if_none.rs  get_user_role_for_module_and_fail_if_none_data.rs
modelina-fix/src/: lib.rs
modelina-rs/resources/models/: anonymous_schema2.rs  anonymous_schema8.rs  one_api_request_payload.rs
modelina-rs/src/: lib.rs
resources/models/: anonymous_schema4.rs  delete_package_element_data.rs  one_api_request_payload.rs
schema2code/: Cargo.toml
schema2code/src/: deserializer.rs  lib.rs  parser.rs
schema2code/src/generator/: mod.rs  protobuf_gen.rs  rust_gen.rs
src/: lib.rs
