[package]
name = "modelina-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
quote = "1.0.33"
syn ={ version="2.0.29", features=["full", "extra-traits"]}
test-log = "0.2.12"
