[package]
name = "asyncapi-schema-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"
quote = "1.0.33"
rayon = "1.7.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
syn = "2.0.29"
