[package]
name = "codegen-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
schema2code = { path = "../schema2code", version = "0.1.0" }
serde_yaml = "0.9.25"

[dependencies]
monostate = "0.1.9"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["serde"] }
