[package]
name = "schema2code"
version = "0.1.0"
edition = "2021"
authors = ["Lurian <lurian-code@protonmail.com>"]
description = "Generate Code in any language from a JSON Schema compliant document"
readme = "../README.md"
repository = "https://github.com/lur1an/schema2code"
license = "MIT OR Apache-2.0"
categories = ["development-tools", "code-generation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
monostate = "0.1.9"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.66"
quote = "1.0.33"
rayon = "1.7.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
syn = "2.0.29"
